5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4130/executions/1800_2568.log
== TEST (2019-06-09 02:05:35) 
-- CODE:
n = int(input("Base: "))

t = 0
x = n

while(t < n):
	v = x * "*" + 2 * t * "o" + x * "*"
	x = x - 1
	print(v)
	t = t + 1
-- OUTPUT:
**********************
**********oo**********
*********oooo*********
********oooooo********
*******oooooooo*******
******oooooooooo******
*****oooooooooooo*****
****oooooooooooooo****
***oooooooooooooooo***
**oooooooooooooooooo**
*oooooooooooooooooooo*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 02:05:47) 
-- CODE:
n = int(input("Base: "))

t = 0
x = n

while(t < n):
	v = x * "*" + 2 * t * "o" + x * "*"
	x = x - 1
	print(v)
	t = t + 1
-- EXECUTION TIME:
0.916285
-- TEST CASE 1:
---- input:
11
---- correct output:
**********************
**********oo**********
*********oooo*********
********oooooo********
*******oooooooo*******
******oooooooooo******
*****oooooooooooo*****
****oooooooooooooo****
***oooooooooooooooo***
**oooooooooooooooooo**
*oooooooooooooooooooo*
---- user output:
**********************
**********oo**********
*********oooo*********
********oooooo********
*******oooooooo*******
******oooooooooo******
*****oooooooooooo*****
****oooooooooooooo****
***oooooooooooooooo***
**oooooooooooooooooo**
*oooooooooooooooooooo*
-- TEST CASE 2:
---- input:
19
---- correct output:
**************************************
******************oo******************
*****************oooo*****************
****************oooooo****************
***************oooooooo***************
**************oooooooooo**************
*************oooooooooooo*************
************oooooooooooooo************
***********oooooooooooooooo***********
**********oooooooooooooooooo**********
*********oooooooooooooooooooo*********
********oooooooooooooooooooooo********
*******oooooooooooooooooooooooo*******
******oooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooo*
---- user output:
**************************************
******************oo******************
*****************oooo*****************
****************oooooo****************
***************oooooooo***************
**************oooooooooo**************
*************oooooooooooo*************
************oooooooooooooo************
***********oooooooooooooooo***********
**********oooooooooooooooooo**********
*********oooooooooooooooooooo*********
********oooooooooooooooooooooo********
*******oooooooooooooooooooooooo*******
******oooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooo*
-- TEST CASE 3:
---- input:
26
---- correct output:
****************************************************
*************************oo*************************
************************oooo************************
***********************oooooo***********************
**********************oooooooo**********************
*********************oooooooooo*********************
********************oooooooooooo********************
*******************oooooooooooooo*******************
******************oooooooooooooooo******************
*****************oooooooooooooooooo*****************
****************oooooooooooooooooooo****************
***************oooooooooooooooooooooo***************
**************oooooooooooooooooooooooo**************
*************oooooooooooooooooooooooooo*************
************oooooooooooooooooooooooooooo************
***********oooooooooooooooooooooooooooooo***********
**********oooooooooooooooooooooooooooooooo**********
*********oooooooooooooooooooooooooooooooooo*********
********oooooooooooooooooooooooooooooooooooo********
*******oooooooooooooooooooooooooooooooooooooo*******
******oooooooooooooooooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooooooooooooooooo*
---- user output:
****************************************************
*************************oo*************************
************************oooo************************
***********************oooooo***********************
**********************oooooooo**********************
*********************oooooooooo*********************
********************oooooooooooo********************
*******************oooooooooooooo*******************
******************oooooooooooooooo******************
*****************oooooooooooooooooo*****************
****************oooooooooooooooooooo****************
***************oooooooooooooooooooooo***************
**************oooooooooooooooooooooooo**************
*************oooooooooooooooooooooooooo*************
************oooooooooooooooooooooooooooo************
***********oooooooooooooooooooooooooooooo***********
**********oooooooooooooooooooooooooooooooo**********
*********oooooooooooooooooooooooooooooooooo*********
********oooooooooooooooooooooooooooooooooooo**
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:12:10) 
-- CODE:
n = int(input("Base: "))

for i in range(n)
	print((n - 1) * "*" + 2 * i * "o" + (n - i) * "*")
-- ERROR:
File "XXXX", line 3
    for i in range(n)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:12:10) 
-- CODE:
n = int(input("Base: "))

for i in range(n)
	print((n - 1) * "*" + 2 * i * "o" + (n - i) * "*")
-- ERROR:
File "XXXX", line 3
    for i in range(n)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:12:10) 
-- CODE:
n = int(input("Base: "))

for i in range(n)
	print((n - 1) * "*" + 2 * i * "o" + (n - i) * "*")
-- ERROR:
File "XXXX", line 3
    for i in range(n)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:12:11) 
-- CODE:
n = int(input("Base: "))

for i in range(n)
	print((n - 1) * "*" + 2 * i * "o" + (n - i) * "*")
-- ERROR:
File "XXXX", line 3
    for i in range(n)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:12:12) 
-- CODE:
n = int(input("Base: "))

for i in range(n)
	print((n - 1) * "*" + 2 * i * "o" + (n - i) * "*")
-- ERROR:
File "XXXX", line 3
    for i in range(n)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:12:12) 
-- CODE:
n = int(input("Base: "))

for i in range(n)
	print((n - 1) * "*" + 2 * i * "o" + (n - i) * "*")
-- ERROR:
File "XXXX", line 3
    for i in range(n)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:12:12) 
-- CODE:
n = int(input("Base: "))

for i in range(n)
	print((n - 1) * "*" + 2 * i * "o" + (n - i) * "*")
-- ERROR:
File "XXXX", line 3
    for i in range(n)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:12:12) 
-- CODE:
n = int(input("Base: "))

for i in range(n)
	print((n - 1) * "*" + 2 * i * "o" + (n - i) * "*")
-- ERROR:
File "XXXX", line 3
    for i in range(n)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:12:12) 
-- CODE:
n = int(input("Base: "))

for i in range(n)
	print((n - 1) * "*" + 2 * i * "o" + (n - i) * "*")
-- ERROR:
File "XXXX", line 3
    for i in range(n)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:12:12) 
-- CODE:
n = int(input("Base: "))

for i in range(n)
	print((n - 1) * "*" + 2 * i * "o" + (n - i) * "*")
-- ERROR:
File "XXXX", line 3
    for i in range(n)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:12:12) 
-- CODE:
n = int(input("Base: "))

for i in range(n)
	print((n - 1) * "*" + 2 * i * "o" + (n - i) * "*")
-- ERROR:
File "XXXX", line 3
    for i in range(n)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:12:18) 
-- CODE:
n = int(input("Base: "))

for i in range(n)
	print((n - 1) * "*" + 2 * i * "o" + (n - i) * "*")
-- ERROR:
File "XXXX", line 3
    for i in range(n)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:13:11) 
-- CODE:
x = int(input("Base: "))

for i in range(x)
	print((x - i) * "*" + 2 * i * "o" + (n - i) * "*")
-- ERROR:
File "XXXX", line 3
    for i in range(x)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:13:11) 
-- CODE:
x = int(input("Base: "))

for i in range(x)
	print((x - i) * "*" + 2 * i * "o" + (n - i) * "*")
-- ERROR:
File "XXXX", line 3
    for i in range(x)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:13:13) 
-- CODE:
x = int(input("Base: "))

for i in range(x)
	print((x - i) * "*" + 2 * i * "o" + (n - i) * "*")
-- ERROR:
File "XXXX", line 3
    for i in range(x)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:13:15) 
-- CODE:
x = int(input("Base: "))

for i in range(x)
	print((x - i) * "*" + 2 * i * "o" + (n - i) * "*")
-- ERROR:
File "XXXX", line 3
    for i in range(x)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:13:16) 
-- CODE:
x = int(input("Base: "))

for i in range(x)
	print((x - i) * "*" + 2 * i * "o" + (n - i) * "*")
-- ERROR:
File "XXXX", line 3
    for i in range(x)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:13:16) 
-- CODE:
x = int(input("Base: "))

for i in range(x)
	print((x - i) * "*" + 2 * i * "o" + (n - i) * "*")
-- ERROR:
File "XXXX", line 3
    for i in range(x)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:13:19) 
-- CODE:
x = int(input("Base: "))

for i in range(x)
	print((x - i) * "*" + 2 * i * "o" + (n - i) * "*")
-- ERROR:
File "XXXX", line 3
    for i in range(x)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:13:46) 
-- CODE:
x = int(input("Base: "))

for i in range(x)
	print((x - i) * "*" + 2 * i * "o" + (n - i) * "*")
-- ERROR:
File "XXXX", line 3
    for i in range(x)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:13:50) 
-- CODE:
x = int(input("Base: "))

for i in range(x)
	print((x - i) * "*" + 2 * i * "o" + (n - i) * "*")
-- ERROR:
File "XXXX", line 3
    for i in range(x)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:13:57) 
-- CODE:
x = int(input("Base: "))

for i in range(x):
	print((x - i) * "*" + 2 * i * "o" + (n - i) * "*")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print((x - i) * "*" + 2 * i * "o" + (n - i) * "*")
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:14:10) 
-- CODE:
x = int(input("Base: "))

for i in range(x):
	print((x - i) * "*" + 2 * i * "o" + (x - i) * "*")
-- OUTPUT:
**********************
**********oo**********
*********oooo*********
********oooooo********
*******oooooooo*******
******oooooooooo******
*****oooooooooooo*****
****oooooooooooooo****
***oooooooooooooooo***
**oooooooooooooooooo**
*oooooooooooooooooooo*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 23:14:15) 
-- CODE:
x = int(input("Base: "))

for i in range(x):
	print((x - i) * "*" + 2 * i * "o" + (x - i) * "*")
-- EXECUTION TIME:
0.802373
-- TEST CASE 1:
---- input:
11
---- correct output:
**********************
**********oo**********
*********oooo*********
********oooooo********
*******oooooooo*******
******oooooooooo******
*****oooooooooooo*****
****oooooooooooooo****
***oooooooooooooooo***
**oooooooooooooooooo**
*oooooooooooooooooooo*
---- user output:
**********************
**********oo**********
*********oooo*********
********oooooo********
*******oooooooo*******
******oooooooooo******
*****oooooooooooo*****
****oooooooooooooo****
***oooooooooooooooo***
**oooooooooooooooooo**
*oooooooooooooooooooo*
-- TEST CASE 2:
---- input:
19
---- correct output:
**************************************
******************oo******************
*****************oooo*****************
****************oooooo****************
***************oooooooo***************
**************oooooooooo**************
*************oooooooooooo*************
************oooooooooooooo************
***********oooooooooooooooo***********
**********oooooooooooooooooo**********
*********oooooooooooooooooooo*********
********oooooooooooooooooooooo********
*******oooooooooooooooooooooooo*******
******oooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooo*
---- user output:
**************************************
******************oo******************
*****************oooo*****************
****************oooooo****************
***************oooooooo***************
**************oooooooooo**************
*************oooooooooooo*************
************oooooooooooooo************
***********oooooooooooooooo***********
**********oooooooooooooooooo**********
*********oooooooooooooooooooo*********
********oooooooooooooooooooooo********
*******oooooooooooooooooooooooo*******
******oooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooo*
-- TEST CASE 3:
---- input:
26
---- correct output:
****************************************************
*************************oo*************************
************************oooo************************
***********************oooooo***********************
**********************oooooooo**********************
*********************oooooooooo*********************
********************oooooooooooo********************
*******************oooooooooooooo*******************
******************oooooooooooooooo******************
*****************oooooooooooooooooo*****************
****************oooooooooooooooooooo****************
***************oooooooooooooooooooooo***************
**************oooooooooooooooooooooooo**************
*************oooooooooooooooooooooooooo*************
************oooooooooooooooooooooooooooo************
***********oooooooooooooooooooooooooooooo***********
**********oooooooooooooooooooooooooooooooo**********
*********oooooooooooooooooooooooooooooooooo*********
********oooooooooooooooooooooooooooooooooooo********
*******oooooooooooooooooooooooooooooooooooooo*******
******oooooooooooooooooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooooooooooooooooo*
---- user output:
****************************************************
*************************oo*************************
************************oooo************************
***********************oooooo***********************
**********************oooooooo**********************
*********************oooooooooo*********************
********************oooooooooooo********************
*******************oooooooooooooo*******************
******************oooooooooooooooo******************
*****************oooooooooooooooooo*****************
****************oooooooooooooooooooo****************
***************oooooooooooooooooooooo***************
**************oooooooooooooooooooooooo**************
*************oooooooooooooooooooooooooo*************
************oooooooooooooooooooooooooooo************
***********oooooooooooooooooooooooooooooo***********
**********oooooooooooooooooooooooooooooooo**********
*********oooooooooooooooooooooooooooooooooo*********
********oooooooooooooooooooooooooooooooooooo**
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
